Remove colour change until a11y contrast issue resolved

--- a/client/scss/components/_numbered_list.scss
+++ b/client/scss/components/_numbered_list.scss
@@ -114,22 +114,6 @@ $numbered-list-number-size: 96px;
   @include visually-hidden();
 }
 
-.numbered-list__title--turquoise {
-  color: color('turquoise');
-}
-
-.numbered-list__title--purple {
-  color: color('purple');
-}
-
-.numbered-list__title--red {
-  color: color('red');
-}
-
-.numbered-list__title--orange {
-  color: color('orange');
-}
-
 .numbered-list__date {
   @include font('HNL7');
   position: relative;
